# kdepim

./: CMakeLists.txt  kdepim.categories
doc/: CMakeLists.txt
doc/knode/: CMakeLists.txt
knode/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  articlewidget.cpp  articlewidget.h  headerview.cpp  headerview.h  knaccountmanager.cpp  knapplication.cpp  knapplication.h  knarticle.cpp  knarticle.h  knarticlecollection.cpp  knarticlefactory.cpp  knarticlefactory.h  knarticlefilter.cpp  knarticlefilter.h  knarticlemanager.cpp  knarticlemanager.h  knarticlewindow.cpp  knarticlewindow.h  kncleanup.cpp  kncleanup.h  kncollectionviewitem.cpp  kncomposer.cpp  kncomposer.h  kncomposerview.cpp  knconfig.cpp  knconfig.h  knconfigmanager.cpp  knconfigpages.cpp  knconfigwidgets.cpp  knconfigwidgets.h  knfiltermanager.cpp  knfolder.cpp  knfoldermanager.cpp  knglobals.cpp  knglobals.h  kngroup.cpp  kngroup.h  (+41 more)
knode/akobackit/: akonadi_manager.cpp  akonadi_manager.h  constant.h  folder_manager.cpp  folder_manager.h  group.cpp  group.h  group_manager.cpp  group_manager.h  item_local_article.cpp  item_local_article.h  item_merge_job.cpp  item_merge_job.h  item_remote_article.cpp  item_remote_article.h  items_deletion_job.cpp  items_deletion_job.h  localfolders_setup_job.cpp  localfolders_setup_job.h  nntpaccount.cpp  nntpaccount.h  nntpaccount_manager.cpp  nntpaccount_manager.h
knode/collectiontree/: collection_filter_proxy_model.cpp  collection_filter_proxy_model.h  view.cpp  view.h  widget.cpp  widget.h
knode/composer/: attachment.cpp  attachment.h  attachment_view.cpp  attachment_view.h
knode/configuration/: identity_edition_dialog.cpp  identity_widget.cpp
knode/groupselection/: checked_state_proxy_model.cpp  dialog_base.cpp  dialog_base.h  dialog_base.ui  group_model.cpp  group_model.h  group_selection_dialog.cpp  group_selection_dialog.h  group_subscription_dialog.cpp  group_subscription_dialog.h  group_subscription_dialog.ui  recent_group_proxy_model.cpp  recent_group_proxy_model.h  subscription_state_grouping_proxy_model.cpp  subscription_state_proxy_model.cpp
knode/groupselection/helper/: group_list_date_picker.cpp
knode/groupselection/model/: base_grouping_proxy_model.cpp  base_grouping_proxy_model.h  group_model.cpp  recent_group_proxy_model.cpp  recent_group_proxy_model.h  selection_grouping_proxy_model.cpp  subscription_grouping_proxy_model.cpp  subscription_state_grouping_proxy_model.cpp  subscription_state_grouping_proxy_model.h  subscription_state_proxy_model.h
knode/groupselector/: group_selection_proxy_model.cpp  group_selection_proxy_model.h  group_subscription_dialog.cpp  group_subscription_dialog.h  group_subscription_dialog.ui  subscription_change_filter_proxy_model.cpp  subscription_change_filter_proxy_model.h  subscription_state_grouping_proxy_model.cpp  subscription_state_grouping_proxy_model.h  subscription_state_model.cpp  subscription_state_model.h  subscriptionjob_p.h
knode/kconf_update/: knode.upd
knode/messagelist/: headers_model.cpp  headers_model.h  headers_view.cpp  headers_view.h  headers_widget.cpp  headers_widget.h
knode/messagelistview/: widget.cpp  widget.h
knode/pics/: CMakeLists.txt
knode/tests/: CMakeLists.txt  akonadi_migrator_test_folders.cpp  knodetest.cpp
knode/tests/data/unittestenv/kdehome/share/config/: akonadi-firstrunrc  kdedrc
knode/update/: CMakeLists.txt  akonadi_migrator.cpp  akonadi_migrator.h  legacy_identity.cpp  legacy_identity.h  main.cpp  updater_base.cpp  updater_base.h
knode/update/legacy/: knarticle.cpp  knarticle.h  knarticlecollection.cpp  knarticlecollection.h  kncollection.cpp  kncollection.h  knfolder.cpp  knfolder.h  knfoldermanager.cpp  knfoldermanager.h
knode/utils/: locale.cpp  locale.h  startup.cpp  startup.h
messagelist/: storagemodel.cpp
messagelist/core/: aggregation.h
